[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/world/WorldGenerator.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actors/enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/actors/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Main.gd" type="Script" id=4]
[ext_resource path="res://src/UI/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/world/Coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/world/Collectables.gd" type="Script" id=8]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )
Enemy = ExtResource( 2 )
Coin = ExtResource( 7 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2, 2 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
margin_top = -1.0
margin_right = 510.0
margin_bottom = 254.0
color = Color( 0.0627451, 0.0509804, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldGenerator" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 70, -200 )

[node name="Collectables" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Coins" type="Node2D" parent="."]

[node name="GameOverTimer" type="Timer" parent="."]
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="hurted" from="Player" to="." method="_on_Player_hurted"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
